data/derived/sp14/progs/unify/prog0596.ml.out
Characters 508-512:
  | Crazy(e1, e2, e3) -> if (e1 > e2) then abs_float(e3) else (-abs_float(e3));;
                                                    ^^^^
Error: This expression has type expr but an expression was expected of type
         float
